feat: remove team id landing, fetch random quest instead.
