# src/backend/generated/models/validation_base_request.go
@@ -1,0 +1,90 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// ValidationBaseRequest validation base request
+//
+// swagger:model ValidationBaseRequest
+type ValidationBaseRequest struct {
+
+	// answer
+	// Example: ["first_word","second_word","third_word"]
+	// Required: true
+	Answer []string `json:"answer"`
+
+	// quest id
+	// Example: 101
+	// Required: true
+	QuestID *int64 `json:"quest_id"`
+}
+
+// Validate validates this validation base request
+func (m *ValidationBaseRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAnswer(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateQuestID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ValidationBaseRequest) validateAnswer(formats strfmt.Registry) error {
+
+	if err := validate.Required("answer", "body", m.Answer); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *ValidationBaseRequest) validateQuestID(formats strfmt.Registry) error {
+
+	if err := validate.Required("quest_id", "body", m.QuestID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this validation base request based on context it is used
+func (m *ValidationBaseRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ValidationBaseRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ValidationBaseRequest) UnmarshalBinary(b []byte) error {
+	var res ValidationBaseRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
