# src/backend/generated/restapi/operations/version1/get_api_v1_quest_random_responses.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package version1
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/eldarbr/library-quest/backend/generated/models"
+)
+
+// GetAPIV1QuestRandomOKCode is the HTTP code returned for type GetAPIV1QuestRandomOK
+const GetAPIV1QuestRandomOKCode int = 200
+
+/*
+GetAPIV1QuestRandomOK Successful retrieval of quest data.
+
+swagger:response getApiV1QuestRandomOK
+*/
+type GetAPIV1QuestRandomOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.QuestResponse `json:"body,omitempty"`
+}
+
+// NewGetAPIV1QuestRandomOK creates GetAPIV1QuestRandomOK with default headers values
+func NewGetAPIV1QuestRandomOK() *GetAPIV1QuestRandomOK {
+
+	return &GetAPIV1QuestRandomOK{}
+}
+
+// WithPayload adds the payload to the get Api v1 quest random o k response
+func (o *GetAPIV1QuestRandomOK) WithPayload(payload *models.QuestResponse) *GetAPIV1QuestRandomOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get Api v1 quest random o k response
+func (o *GetAPIV1QuestRandomOK) SetPayload(payload *models.QuestResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAPIV1QuestRandomOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetAPIV1QuestRandomInternalServerErrorCode is the HTTP code returned for type GetAPIV1QuestRandomInternalServerError
+const GetAPIV1QuestRandomInternalServerErrorCode int = 500
+
+/*
+GetAPIV1QuestRandomInternalServerError Internal server error.
+
+swagger:response getApiV1QuestRandomInternalServerError
+*/
+type GetAPIV1QuestRandomInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.InternalServerError `json:"body,omitempty"`
+}
+
+// NewGetAPIV1QuestRandomInternalServerError creates GetAPIV1QuestRandomInternalServerError with default headers values
+func NewGetAPIV1QuestRandomInternalServerError() *GetAPIV1QuestRandomInternalServerError {
+
+	return &GetAPIV1QuestRandomInternalServerError{}
+}
+
+// WithPayload adds the payload to the get Api v1 quest random internal server error response
+func (o *GetAPIV1QuestRandomInternalServerError) WithPayload(payload *models.InternalServerError) *GetAPIV1QuestRandomInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get Api v1 quest random internal server error response
+func (o *GetAPIV1QuestRandomInternalServerError) SetPayload(payload *models.InternalServerError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetAPIV1QuestRandomInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
