# src/backend/generated/restapi/operations/version1/post_api_v1_validate_random.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package version1
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// PostAPIV1ValidateRandomHandlerFunc turns a function with the right signature into a post API v1 validate random handler
+type PostAPIV1ValidateRandomHandlerFunc func(PostAPIV1ValidateRandomParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn PostAPIV1ValidateRandomHandlerFunc) Handle(params PostAPIV1ValidateRandomParams) middleware.Responder {
+	return fn(params)
+}
+
+// PostAPIV1ValidateRandomHandler interface for that can handle valid post API v1 validate random params
+type PostAPIV1ValidateRandomHandler interface {
+	Handle(PostAPIV1ValidateRandomParams) middleware.Responder
+}
+
+// NewPostAPIV1ValidateRandom creates a new http.Handler for the post API v1 validate random operation
+func NewPostAPIV1ValidateRandom(ctx *middleware.Context, handler PostAPIV1ValidateRandomHandler) *PostAPIV1ValidateRandom {
+	return &PostAPIV1ValidateRandom{Context: ctx, Handler: handler}
+}
+
+/*
+	PostAPIV1ValidateRandom swagger:route POST /api/v1/validate/random v1 postApiV1ValidateRandom
+
+# Validate a random quest answer
+
+Submits an answer for a given quest for validation.
+*/
+type PostAPIV1ValidateRandom struct {
+	Context *middleware.Context
+	Handler PostAPIV1ValidateRandomHandler
+}
+
+func (o *PostAPIV1ValidateRandom) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewPostAPIV1ValidateRandomParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
