# src/backend/generated/restapi/operations/version1/post_api_v1_validate_random_parameters.go
@@ -1,0 +1,86 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package version1
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	stderrors "errors"
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/validate"
+
+	"github.com/eldarbr/library-quest/backend/generated/models"
+)
+
+// NewPostAPIV1ValidateRandomParams creates a new PostAPIV1ValidateRandomParams object
+//
+// There are no default values defined in the spec.
+func NewPostAPIV1ValidateRandomParams() PostAPIV1ValidateRandomParams {
+
+	return PostAPIV1ValidateRandomParams{}
+}
+
+// PostAPIV1ValidateRandomParams contains all the bound params for the post API v1 validate random operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters PostAPIV1ValidateRandom
+type PostAPIV1ValidateRandomParams struct {
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*The validation payload containing the team, quest, and their answer.
+	  Required: true
+	  In: body
+	*/
+	Body *models.ValidationBaseRequest
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewPostAPIV1ValidateRandomParams() beforehand.
+func (o *PostAPIV1ValidateRandomParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer func() {
+			_ = r.Body.Close()
+		}()
+		var body models.ValidationBaseRequest
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if stderrors.Is(err, io.EOF) {
+				res = append(res, errors.Required("body", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("body", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(r.Context())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("body", "body", ""))
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
