# src/backend/generated/restapi/operations/version1/post_api_v1_validate_random_responses.go
@@ -1,0 +1,149 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package version1
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/eldarbr/library-quest/backend/generated/models"
+)
+
+// PostAPIV1ValidateRandomOKCode is the HTTP code returned for type PostAPIV1ValidateRandomOK
+const PostAPIV1ValidateRandomOKCode int = 200
+
+/*
+PostAPIV1ValidateRandomOK The provided answer is correct.
+
+swagger:response postApiV1ValidateRandomOK
+*/
+type PostAPIV1ValidateRandomOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.CorrectAnswerResponse `json:"body,omitempty"`
+}
+
+// NewPostAPIV1ValidateRandomOK creates PostAPIV1ValidateRandomOK with default headers values
+func NewPostAPIV1ValidateRandomOK() *PostAPIV1ValidateRandomOK {
+
+	return &PostAPIV1ValidateRandomOK{}
+}
+
+// WithPayload adds the payload to the post Api v1 validate random o k response
+func (o *PostAPIV1ValidateRandomOK) WithPayload(payload *models.CorrectAnswerResponse) *PostAPIV1ValidateRandomOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post Api v1 validate random o k response
+func (o *PostAPIV1ValidateRandomOK) SetPayload(payload *models.CorrectAnswerResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostAPIV1ValidateRandomOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostAPIV1ValidateRandomBadRequestCode is the HTTP code returned for type PostAPIV1ValidateRandomBadRequest
+const PostAPIV1ValidateRandomBadRequestCode int = 400
+
+/*
+PostAPIV1ValidateRandomBadRequest The provided answer is incorrect. The response body contains the indices of the incorrect words.
+
+swagger:response postApiV1ValidateRandomBadRequest
+*/
+type PostAPIV1ValidateRandomBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ValidationError `json:"body,omitempty"`
+}
+
+// NewPostAPIV1ValidateRandomBadRequest creates PostAPIV1ValidateRandomBadRequest with default headers values
+func NewPostAPIV1ValidateRandomBadRequest() *PostAPIV1ValidateRandomBadRequest {
+
+	return &PostAPIV1ValidateRandomBadRequest{}
+}
+
+// WithPayload adds the payload to the post Api v1 validate random bad request response
+func (o *PostAPIV1ValidateRandomBadRequest) WithPayload(payload *models.ValidationError) *PostAPIV1ValidateRandomBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post Api v1 validate random bad request response
+func (o *PostAPIV1ValidateRandomBadRequest) SetPayload(payload *models.ValidationError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostAPIV1ValidateRandomBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostAPIV1ValidateRandomInternalServerErrorCode is the HTTP code returned for type PostAPIV1ValidateRandomInternalServerError
+const PostAPIV1ValidateRandomInternalServerErrorCode int = 500
+
+/*
+PostAPIV1ValidateRandomInternalServerError Internal server error.
+
+swagger:response postApiV1ValidateRandomInternalServerError
+*/
+type PostAPIV1ValidateRandomInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.InternalServerError `json:"body,omitempty"`
+}
+
+// NewPostAPIV1ValidateRandomInternalServerError creates PostAPIV1ValidateRandomInternalServerError with default headers values
+func NewPostAPIV1ValidateRandomInternalServerError() *PostAPIV1ValidateRandomInternalServerError {
+
+	return &PostAPIV1ValidateRandomInternalServerError{}
+}
+
+// WithPayload adds the payload to the post Api v1 validate random internal server error response
+func (o *PostAPIV1ValidateRandomInternalServerError) WithPayload(payload *models.InternalServerError) *PostAPIV1ValidateRandomInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post Api v1 validate random internal server error response
+func (o *PostAPIV1ValidateRandomInternalServerError) SetPayload(payload *models.InternalServerError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostAPIV1ValidateRandomInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
