# src/backend/spec/openapi.yaml
@@ -35,6 +35,24 @@ paths:
           schema:
             $ref: "#/definitions/InternalServerError"
 
+  /api/v1/quest/random:
+    get:
+      tags:
+        - "v1"
+      summary: "Retrieve a random quest details"
+      description: "Fetches a random quest, including its ID and the words needed to solve it."
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "Successful retrieval of quest data."
+          schema:
+            $ref: "#/definitions/QuestResponse"
+        "500":
+          description: "Internal server error."
+          schema:
+            $ref: "#/definitions/InternalServerError"
+
   /api/v1/validate:
     post:
       tags:
@@ -65,6 +83,37 @@ paths:
           description: "The team is not authorized to submit an answer for this quest."
           schema:
             $ref: "#/definitions/AuthorizationError"
+        "500":
+          description: "Internal server error."
+          schema:
+            $ref: "#/definitions/InternalServerError"
+
+  /api/v1/validate/random:
+    post:
+      tags:
+        - "v1"
+      summary: "Validate a random quest answer"
+      description: "Submits an answer for a given quest for validation."
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "The validation payload containing the team, quest, and their answer."
+          required: true
+          schema:
+            $ref: "#/definitions/ValidationBaseRequest"
+      responses:
+        "200":
+          description: "The provided answer is correct."
+          schema:
+            $ref: "#/definitions/CorrectAnswerResponse"
+        "400":
+          description: "The provided answer is incorrect. The response body contains the indices of the incorrect words."
+          schema:
+            $ref: "#/definitions/ValidationError"
         "500":
           description: "Internal server error."
           schema:
@@ -128,17 +177,12 @@ definitions:
         example: "3"
         x-omitempty: false
 
-  ValidationRequest:
+  ValidationBaseRequest:
     type: "object"
     required:
-      - "team_id"
       - "quest_id"
       - "answer"
     properties:
-      team_id:
-        type: "integer"
-        format: "int64"
-        example: 25
       quest_id:
         type: "integer"
         format: "int64"
@@ -148,6 +192,19 @@ definitions:
         items:
           type: "string"
         example: ["first_word", "second_word", "third_word"]
+
+  ValidationRequest:
+    type: "object"
+    required:
+      - "team_id"
+      - "answer_validation"
+    properties:
+      team_id:
+        type: "integer"
+        format: "int64"
+        example: 25
+      answer_validation:
+        $ref: "#/definitions/ValidationBaseRequest"
 
   ValidationError:
     type: "object"
